--- a/_includes/social-media-list.html
+++ b/_includes/social-media-list.html
@@ -31,9 +31,8 @@
   {% if site.academia_username %}
   <li>
     <a href="https://uni-kiel.academia.edu/{{ site.academia_username }}">
-      <span class="icon icon--graduation-cap">
-      </span>
-
+      <i class='fa fa-graduation-cap'></i>
+      
       <span class="username">{{ site.academia_username }}</span>
     </a>
   </li>
