--- a/_includes/social-media-list.html
+++ b/_includes/social-media-list.html
@@ -31,7 +31,7 @@
   {% if site.academia_username %}
   <li>
     <a href="https://uni-kiel.academia.edu/{{ site.academia_username }}">
-      <i class='fa fa-graduation-cap'></i>
+      <i class='fa fa-graduation-cap' style='color:#828282;'></i>
       
       <span class="username">{{ site.academia_username }}</span>
     </a>
