--- a/_layouts/bib_details.html
+++ b/_layouts/bib_details.html
@@ -20,9 +20,7 @@ margin: 10px;
 
 {% if page.entry.key %}
 <div class="pdfimg">
-<a href="/pdf/{{ page.entry.key }}.pdf">
-	<img src="/pdf/{{ page.entry.key }}.png" width="300">
-</a>
+<iframe src="https://zenodo.org/record/2538016/preview/hinz_from_hunting_2018.pdf" width="100%" height="100%"></iframe>
 </div>
 
 {% endif %}
