--- a/_layouts/bib_details.html
+++ b/_layouts/bib_details.html
@@ -20,9 +20,7 @@ margin: 10px;
 <hr>
 
 {% if page.entry.key %}
-<div class="pdfimg">
-<iframe src="https://zenodo.org/record/2538016/preview/hinz_from_hunting_2018.pdf" width="100%" height="100%"></iframe>
-</div>
+<object data="https://zenodo.org/record/2538016/files/hinz_from_hunting_2018.pdf?download=1" width="1000" height="1000" type='application/pdf'/>
 
 {% endif %}
 
