--- a/_layouts/bib_details.html
+++ b/_layouts/bib_details.html
@@ -20,8 +20,8 @@ margin: 10px;
 <hr>
 
 {% if page.entry.key %}
-<object data="https://zenodo.org/record/2538016/files/hinz_from_hunting_2018.pdf?download=1" width="1000" height="1000" type='application/pdf'/>
-
+<object data="https://zenodo.org/record/2538016/files/hinz_from_hunting_2018.pdf?download=1" width="500" height="800" type='application/pdf'>
+</object>
 {% endif %}
 
 {% if page.entry.abstract %}
