--- a/_layouts/bib_details.html
+++ b/_layouts/bib_details.html
@@ -20,9 +20,7 @@ margin: 10px;
 <hr>
 
 {% if page.entry.key %}
- <object data="https://zenodo.org/record/2538016/files/hinz_from_hunting_2018.pdf" style="width:100%;height:300px">
-  <a href="https://zenodo.org/record/2538016/files/hinz_from_hunting_2018.pdf">PDF laden</a>
-</object>
+<embed src="https://zenodo.org/record/2538016/files/hinz_from_hunting_2018.pdf" type="application/pdf" width="100%" height="600px" />
 {% endif %}
 
 {% if page.entry.abstract %}
