--- a/_layouts/bib_details.html
+++ b/_layouts/bib_details.html
@@ -23,7 +23,7 @@ margin: 10px;
 <embed src="https://zenodo.org/record/2538016/files/hinz_from_hunting_2018.pdf" type="application/pdf" width="100%" height="600px" />
 {% endif %}
 
- <iframe src="https://zenodo.org/record/2538016/preview/hinz_from_hunting_2018.pdf"></iframe>
+ <iframe src="https://hcommons.org/deposits/objects/hc:22370/datastreams/CONTENT/content"></iframe>
  
 {% if page.entry.abstract %}
   {{ page.entry.abstract }}
