--- a/_layouts/bib_details.html
+++ b/_layouts/bib_details.html
@@ -19,9 +19,8 @@ margin: 10px;
 <h4><center>{{ page.entry.author }}</center></h4>
 <hr>
 
-{% if page.entry.preview %}
-<embed src="https://zenodo.org/record/2538016/files/hinz_from_hunting_2018.pdf" type="application/pdf" width="100%" height="600px" />
-  <iframe src="{{ page.entry.preview }}"></iframe>
+{% if page.entry.howpublished %}
+  <iframe src="{{ page.entry.howpublished }}"></iframe>
 {% endif %}
  
 {% if page.entry.abstract %}
