--- a/_layouts/bib_details.html
+++ b/_layouts/bib_details.html
@@ -20,7 +20,7 @@ margin: 10px;
 <hr>
 
 {% if page.entry.preview %}
-  <iframe src="{{ page.entry.preview }}"></iframe>
+  <iframe src="{{ page.entry.preview }}" width="100%" height="600px"></iframe>
 {% endif %}
  
 {% if page.entry.abstract %}
