--- a/css/main.scss
+++ b/css/main.scss
@@ -49,3 +49,9 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+.personal-details {
+    text-align: right;
+    display: block;
+    margin-block-start: 0.67em;
+}
