--- a/_includes/social-media-list.html
+++ b/_includes/social-media-list.html
@@ -1,5 +1,16 @@
 <ul class="social-media-list">
-  {% if site.github_username %}
+  {% if site.author.orcid %}
+  <li>
+    <div itemscope itemtype="https://schema.org/Person">
+      <a itemprop="sameAs" content="https://orcid.org/0000-0002-9904-6548" href="https://orcid.org/0000-0002-9904-6548" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;">
+        <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD icon">
+        0000-0002-9904-6548
+      </a>
+    </div>
+  </li>
+  {% endif %}
+
+  {% if site.author.github_username %}
   <li>
     <a href="https://github.com/{{ site.github_username }}">
       <span class="icon  icon--github">
@@ -8,14 +19,14 @@
         </svg>
       </span>
 
-      <span class="username">{{ site.github_username }}</span>
+      <span class="username">{{ site.author.github_username }}</span>
     </a>
   </li>
   {% endif %}
 
-  {% if site.twitter_username %}
+  {% if site.author.twitter_username %}
   <li>
-    <a href="https://twitter.com/{{ site.twitter_username }}">
+    <a href="https://twitter.com/{{ site.author.twitter_username }}">
       <span class="icon  icon--twitter">
         <svg viewBox="0 0 16 16">
           <path fill="#828282" d="M15.969,3.058c-0.586,0.26-1.217,0.436-1.878,0.515c0.675-0.405,1.194-1.045,1.438-1.809
@@ -23,17 +34,17 @@
         </svg>
       </span>
 
-      <span class="username">{{ site.twitter_username }}</span>
+      <span class="username">{{ site.author.twitter_username }}</span>
     </a>
   </li>
   {% endif %}
 
-  {% if site.academia_username %}
+  {% if site.author.academia_username %}
   <li>
-    <a href="https://uni-kiel.academia.edu/{{ site.academia_username }}">
+    <a href="https://uni-kiel.academia.edu/{{ site.author.academia_username }}">
       <i class='fa fa-graduation-cap' style='color:#828282;'></i>
-      
-      <span class="username">{{ site.academia_username }}</span>
+
+      <span class="username">{{ site.author.academia_username }}</span>
     </a>
   </li>
   {% endif %}
