--- a/_includes/social-media-list.html
+++ b/_includes/social-media-list.html
@@ -3,10 +3,30 @@
   <li>
     <div itemscope itemtype="https://schema.org/Person">
       <a itemprop="sameAs" content="https://orcid.org/0000-0002-9904-6548" href="https://orcid.org/0000-0002-9904-6548" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;">
-        <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD icon">
+        <i class='ai ai-orcid big-icon' style='color:#828282;'></i>
         0000-0002-9904-6548
       </a>
     </div>
+  </li>
+  {% endif %}
+
+  {% if site.author.google_scholar_user %}
+  <li>
+    <a itemprop="sameAs" href="https://scholar.google.com/citations?user={{ site.author.google_scholar_user }}" target="_blank" rel="noopener">
+      <i class="ai ai-google-scholar big-icon" style='color:#828282;'></i>
+
+      <span class="username">{{ site.author.google_scholar_user }}</span>
+    </a>
+  </li>
+  {% endif %}
+
+  {% if site.author.academia_username %}
+  <li>
+    <a href="https://uni-kiel.academia.edu/{{ site.author.academia_username }}">
+      <i class='ai ai-academia big-icon' style='color:#828282;'></i>
+
+      <span class="username">{{ site.author.academia_username }}</span>
+    </a>
   </li>
   {% endif %}
 
@@ -39,13 +59,4 @@
   </li>
   {% endif %}
 
-  {% if site.author.academia_username %}
-  <li>
-    <a href="https://uni-kiel.academia.edu/{{ site.author.academia_username }}">
-      <i class='fa fa-graduation-cap' style='color:#828282;'></i>
-
-      <span class="username">{{ site.author.academia_username }}</span>
-    </a>
-  </li>
-  {% endif %}
 </ul>
