--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="site-header">
+<header class="site-header position-sticky">
   <div class="pure-g">
       <div class="pure-u-1 pure-u-md-1-4 l-box"> </div>
       <div class="pure-u-1 pure-u-md-3-4 l-box">
-        <img class="site-logo" src="{{ site.baseurl }}/images/logo_test_1.svg" alt="Logo" height="48"> 
+        <img class="site-logo" src="{{ site.baseurl }}/images/logo_test_1.svg" alt="Logo" height="48">
           <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}<span class="site-subtitle">{{ site.subtitle }}</span></a>
 
           <nav class="site-nav">
