--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,9 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/css/pure-min.css" | prepend: site.baseurl }}">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="{{ "/css/grids-responsive-old-ie-min.css" | prepend: site.baseurl }}">
 <![endif]-->
