--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
-<header class="site-header position-sticky">
+<header class="site-header">
   <div class="pure-g">
-      <div class="pure-u-1 pure-u-md-1-4 l-box"> </div>
-      <div class="pure-u-1 pure-u-md-3-4 l-box">
-        <img class="site-logo" src="{{ site.baseurl }}/images/logo_test_1.svg" alt="Logo" height="48">
-          <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}<span class="site-subtitle">{{ site.subtitle }}</span></a>
+      <div class="pure-u-1 pure-u-md-1-4 l-box">
+        <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}<span class="site-subtitle">{{ site.subtitle }}</span></a>
+      </div>
+      <div class="pure-u-1 pure-u-md-1-2 l-box">
+
 
           <nav class="site-nav">
             <a href="#" class="menu-icon">
