--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,13 +2,13 @@
  * Site header
  */
 .site-header {
-    border-top: 2px solid $grey-color-dark;
-    border-bottom: 5px solid $grey-color-light;
+    box-shadow: 0 0.125rem 0.25rem 0 rgba(59,29,0,.11);
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
     position: relative;
-    background: $brand-color;
+    background: white;
+    color: $brand-color;
 }
 
 .site-title {
@@ -18,14 +18,14 @@
     margin-bottom: 0;
     font-weight: 300;
     float: left;
-    text-transform: lowercase;
+    text-transform: uppercase;
 
     &,
     &:visited {
-        color: $grey-color-light;
+        color: darken($brand-color,40%);
     }
     &:hover {
-        color: white;
+        color: $brand-color;
     }
 }
 
@@ -37,7 +37,10 @@
 
     &,
     &:visited {
-        color: $grey-color-light;
+      color: darken($brand-color,40%);
+    }
+    &:hover {
+        color: $brand-color;
     }
 }
 
@@ -55,7 +58,7 @@
     .menu-icon {
         display: none;
     }
-    
+
     li {
       float: left;
       list-style-type: none;
@@ -68,12 +71,11 @@
     .page-link {
       &,
       &:visited {
-          color: $grey-color-light;
+          color: darken($brand-color,40%);
           padding:5px;
       }
       &:hover {
-          color: white;
-          background: darken($brand-color,4%);
+          color: $brand-color;
       }
     }
 
