--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,4 +28,24 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
+  <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@martinusrihhi">
+<meta name="twitter:title" content="{{ page.title }}">
+
+{% if page.description %}
+  <meta name="twitter:description"
+    content="{{ page.meta_description }}">
+{% else %}
+  <meta name="twitter:description"
+    content="{{ page.content | strip_html | xml_escape
+      | truncate: 200 }}">
+{% endif %}
+
+{% if page.image.thumb %}
+  <meta name="twitter:image"
+    content="{{ site.urlimg }}/{{ page.image.thumb }}">
+{% else %}
+  <meta name="twitter:image"
+    content="{{ site.urlimg }}/path/to/cover.png">
+{% endif %}
 </head>
