--- a/_sass/customise.scss
+++ b/_sass/customise.scss
@@ -78,3 +78,6 @@ div.about_me {
 body {
   overflow-x: hidden;
 }
+
+summary h2, summary h3{ display: inline-block; } // you can add different heading tags obviously
+
